--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+ <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>India Rally Club – Coming Soon</title>
   <style>
@@ -14,25 +14,25 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 100;
       text-align: center;
     }
     h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
+      font-size: 3;
+      margin-bottom: 0.2;
     }
     p {
-      font-size: 1.3em;
+      font-size: 1.3;
       color: #f2f2f2;
     }
     .tagline {
       color: #f2c744;
-      margin-bottom: 1.5em;
+      margin-bottom: 1.5;
       font-weight: 600;
     }
     .email {
-      margin-top: 2em;
-      font-size: 1em;
+      margin-top: 2;
+      font-size: 1;
       color: #f2c744;
     }
     .email a {
