--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>🏸 India Rally Club</h1>
+  <h1>India Rally Club</h1>
   <p class="tagline">Serving Joy, One Rally at a Time</p>
   <p>We're setting up the courts and the community. <br> Get ready to rally with us soon!</p>
   <p class="email">Questions? Reach out: <a href="mailto:play@indiarallyclub.com">play@indiarallyclub.com</a></p>
